[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Music/Chasing-Villains.mp3" type="AudioStream" id=1]
[ext_resource path="res://Resources/Screens/GameOverScreen.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/GameOverUI.gd" type="Script" id=3]

[node name="GameOverUI" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 320.5, 180 )
scale = Vector2( 0.502344, 0.505556 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="RestartBtn" type="Button" parent="."]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 233.0
margin_top = 180.0
margin_right = 407.0
margin_bottom = 205.0

[node name="AchievementsBtn" type="Button" parent="."]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 234.0
margin_top = 222.0
margin_right = 408.0
margin_bottom = 247.0

[node name="GameOver" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )

[connection signal="visibility_changed" from="." to="." method="_on_GameOverUI_visibility_changed"]
[connection signal="pressed" from="RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="AchievementsBtn" to="." method="_on_AchievementsBtn_pressed"]
